--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 /* general styles */
 body {
-    background-image: url('../assets/images/background.jpg');
+    background-image: url('../../assets/images/background.webp');
     background-size: cover;
     font-family: Lobster Two, sans-serif;
     font-size: 1.2rem;
@@ -134,6 +134,87 @@ button[type="submit"] {
     color: #3a3a3a;
     border-radius: 10px;
     cursor: pointer;
+}
+
+/* card styles */
+.card {
+    width: 75px;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    position: relative;
+    text-align: center;
+    font-size: 48px;
+    color: #fff8dc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+.card.flipped .front {
+    transform: rotateY(180deg);
+}
+
+.card.flipped .back {
+    transform: rotateY(0deg);
+}
+
+.card .front, .card .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transition: transform 0.6s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .front {
+    background: rgba(255, 255, 255, 0.8);
+    transform: rotateY(0deg);
+}
+
+.question-mark {
+    font-size: 1.5em;
+    color: #77825c;
+}
+
+.card .back {
+    background: #b54f6c;
+    background-size: cover;
+    background-position: center;
+    transform: rotateY(180deg);
+    display: flex;
+}
+
+.card.red { background: #b54f6c; }
+.card.yellow { background: #d2b290; }
+.card.light-blue { background: lightblue; }
+.card.olive-green { background: #868768; }
+.card.purple { background: #9187a7; }
+
+.icon-container {
+    display: flex;
+    position: absolute;
+    bottom: 5px;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.icon {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.icon:hover {
+    transform: scale(1.2);
 }
 
 footer {
