fix: add style rule to CSS that centers the volume-control div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,13 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     margin-top: 20px;
     color: #b54f6c;
+}
+
+div#volume-control {
+    padding-left: 30px;
 }
 
 #volume-icon {
