--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ select {
 button[type="submit"] {
     font-family: playwrite-de-grund;
     font-size: 0.8rem;
+    font-weight: bold;
     text-align: center;
     display: block;
     width: 50%;
@@ -282,7 +283,7 @@ button[type="submit"] {
     padding: 20px;
     border: 1px solid black;
     border-radius: 5px;
-    box-shadow: 0 0 rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.1);
 }
 
 .popup-content h2 {
@@ -307,6 +308,8 @@ button[type="submit"] {
 
 input.vocab-name {
     width: 90%;
+    background-color: #fff8dc;
+    padding: 5px;
 }
 
 .popup-content button {
@@ -495,11 +498,19 @@ footer ul li {
 
     /* footer */
     footer {
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .memo-container {
         margin-left: 2.75em;
+    }
+
+    #social-media a {
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+        font-size: x-large;
+        font-weight: bold;
+        letter-spacing: 10px;
     }
 
     .contact-container {
@@ -578,7 +589,6 @@ footer ul li {
     /* input button */
     button[type="submit"] {
         font-size: 1rem;
-        font-weight: bold;
     }
 
     /* Card styles */
